# yt-clipper

./: .env.example  .gitignore  .implementation-complete  COMMIT_MESSAGE.md  COMPLETE.md  CURRENT_STATUS.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_INDEX.md  Dockerfile  FFMPEG_FIX.md  FFMPEG_FIXES.md  FINAL_FIX.md  FINAL_SOLUTION.md  FINAL_UPDATES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  METADATA_GENERATION.md  Makefile  N8N_INTEGRATION.md  N8N_WORKFLOWS.md  OAUTH_FIX.md  PHASE2_CHECKLIST.md  PHASE2_FINAL.md  PHASE2_REPORT.md  PHASE2_SUCCESS.md  PHASE2_SUMMARY.md  PRODUCTION_READY.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  README_N8N.md  STATUS.md  SUBTITLE_FIX.md  SUCCESS.md  TEST_INSTRUCTIONS.md  UPDATE_DRIVE_URLS.md  YOUTUBE_COOKIES_SETUP.md  debug_youtube.py  docker-compose.yml  (+4 more)
app/: main.py
app/cli/: __init__.py  commands.py
app/config/: settings.py
app/core/: enums.py  exceptions.py
app/infrastructure/: __init__.py
app/infrastructure/cache/: manager.py
app/schemas/: __init__.py  models.py
app/workflows/: clip_workflow.py
docs/architecture/: phase2_overview.md
docs/captions/: caption_engine.md
docs/ffmpeg/: graph_builder.md
docs/formats/: output_formats.md
docs/migration/: phase1_to_phase2.md
docs/rendering/: composition_engine.md
docs/templates/: template_development.md
docs/workflows/: render_pipeline.md
tests/: test_cache.py  test_captions.py  test_composition.py  test_formats.py  test_renderer.py  test_schemas.py  test_storage.py  test_subtitles.py  test_templates.py  test_transcript.py
(+42 files in other folders)
