[project]
name = "yt-clipper"
version = "0.1.0"
description = "AI-powered YouTube video clipper — generate viral short-form clips automatically"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "yt-clipper" },
]

dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.0",
    "yt-dlp>=2024.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "faster-whisper>=1.0.0",
    "click>=8.1.7",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
yt-clipper = "app.main:app"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["temp", "exports"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["temp", "exports"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
